maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:31: error: reassignment to val
    dir = getDirection();
        ^